--- a/wp-content/themes/resort/custom.css
+++ b/wp-content/themes/resort/custom.css
@@ -20,7 +20,7 @@ DESKTOP STYLES
 -----------------
 Add styles inside the media query below that you only want to be applied to the desktop layout of your site */
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 767px) {
 	/* Desktop styles go here */
 
 #wrapper > header {
@@ -235,4 +235,141 @@ mark {
   top: 26px;
   z-index: 999;
 }
+}
+
+@media only screen and (max-width: 767px) {
+/*tablets and mobile style will goes here*/
+#header {
+  padding: 0;
+}
+#top {
+  background: none;
+  float: right;
+  width: 32em;
+}
+#top select {
+  margin: 0;
+}
+mark {
+  display: none;
+}
+#top .widget.widget_currency_converter,#top .widget.widget_nw_ajax_drop_cart {
+  background: none;
+  box-shadow: none;
+  float: left;
+  margin: 0 !important;
+  overflow: visible;
+  padding: 0 !important;
+  width: auto;
+}
+#top nav.col-full {
+  float: left;
+  margin: 0;
+  width: auto;
+}
+#top .inner {
+  margin: 0 !important;
+  overflow: visible;
+  padding: 0 !important;
+}
+#top .inner > h3,#top .nw-cart-title > h3 {
+  border: medium none;
+  float: left;
+  font-size: 1em;
+  margin: 5px 3px 0 5px;
+  padding: 0 !important;
+  width: auto;
+}
+#top .inner > form {
+  float: left;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: auto;
+}
+#top select {
+  margin: 0;
+  width: 100%;
+}
+#top .nw-cart-title {
+  display: none;
+}
+#top .nw-cart-container {
+  clear: both;
+  left: 5px;
+  position: absolute;
+}
+#top .nw-cart-icns-shape {
+  height: 20px;
+  position: inherit;
+  width: 20px;
+  z-index: 99;
+}
+#top #nw-cart-drop-toggle {
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
+  border: medium none;
+  border-radius: 0;
+  color: #000000;
+}
+#top #nw-cart-contents {
+  display: none;
+  float: right;
+}
+#top #nw-cart-drop-content {
+  border-radius: 4px;
+  min-width: 210px;
+  overflow: hidden;
+  padding: 15px;
+  position: absolute;
+  right: 0;
+  top: 26px;
+  z-index: 999;
+}
+#searchform {
+  float: right;
+  width: 32%;
+}
+hgroup {
+  float: right;
+  width: 30%;
+}
+#header #header-contact ul.nav li.phone {
+  color: #000;
+  margin: 20px 0;
+  padding: 0.5em 1em 0.2em 1.8em;
+}
+#wrapper > header {
+  border-bottom: 7px solid #aeb937;
+  box-shadow: 0 0 5px 0 #cccccc;
+  max-width: 1140px;
+  padding: 0;
+}
+.quantity .qty {
+  width: 3.618em;
+}
+.responsive-slider.flexslider .slide .slide-title {
+  display: none;
+}
+.flex-direction-nav {
+  display: none;
+}
+.page-title {
+  -moz-border-bottom-colors: none;
+  -moz-border-left-colors: none;
+  -moz-border-right-colors: none;
+  -moz-border-top-colors: none;
+  background: none repeat scroll 0 0 #aeb937;
+  border-color: #dddddd;
+  border-image: none;
+  border-style: dashed;
+  border-width: 0 0 1px;
+  color: #e4e4e4 !important;
+  font-weight: normal;
+  margin: 0 0 1.387em;
+  padding: 0.2em !important;
+}
+ul.products li.product {
+  width: 44%;
+}
+
+
 }
