--- a/wp-content/themes/resort/custom.css
+++ b/wp-content/themes/resort/custom.css
@@ -20,20 +20,21 @@ DESKTOP STYLES
 -----------------
 Add styles inside the media query below that you only want to be applied to the desktop layout of your site */
 
-@media only screen and (min-width: 767px) {
+/*@media only screen and (min-width: 767px) {*/
 	/* Desktop styles go here */
 
 #wrapper > header {
   border-bottom: 7px solid #aeb937;
   box-shadow: 0 0 5px 0 #cccccc;
   margin: 32px auto;
-  max-width: 1140px;
+  width: 1140px;
   padding: 0;
 }
 #navigation {
   display: block !important;
-  float: left;
+  float: right;
   margin: 0;
+  width: 888px;
 }
 ul.nav ul {
   width: 26.089em; 
@@ -60,11 +61,11 @@ ul.nav ul {
 }
 
 #top {
-  background: none;
+  background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
   border-bottom: medium none;
   float: right;
   position: inherit;
-  width: 37em;
+  width: 525px;
 }
 .has-top-menu #header {
   margin-top: 0;
@@ -78,7 +79,7 @@ ul.nav ul {
 }
 #header #header-contact ul.nav li.phone {
   color: #000;
-  padding: 0.5em 1em 0.2em 1.8em;
+  padding: 0 25px 2px 30px;
 }
 #header #header-contact ul.nav li.phone span {
   color: #aeb937;
@@ -89,7 +90,7 @@ ul.nav ul {
 #footer-wrapper {
   box-shadow: 0 0 5px 0 #cccccc;
   margin: 0 auto;
-  max-width: 1140px;
+  width: 1140px;
   padding: 0;
   background: none repeat scroll 0 0 #aeb937;
 }
@@ -105,7 +106,7 @@ ul.nav ul {
 }
 .entry .woocommerce ul.products li.product {
   box-shadow: 0 0 0 0 #888888;
-  width: 16%;
+  width: 175px;
 }
 #footer ul.nav {
   margin: 0;
@@ -201,6 +202,10 @@ mark {
   margin: 0;
   width: 100%;
 }
+#mobileMenu_top-nav
+{
+  display: none!important;
+}
 #top .nw-cart-title {
   display: none;
 }
@@ -235,11 +240,14 @@ mark {
   top: 26px;
   z-index: 999;
 }
+#header #logo {
+  margin: 15px;
 }
+/*}
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 767px) {*/
 /*tablets and mobile style will goes here*/
-#header {
+/*#header {
   padding: 0;
 }
 #top {
@@ -390,4 +398,4 @@ ul.products li.product {
 }
 
 
-}
+}*/
